--- a/serverless.yml
+++ b/serverless.yml
@@ -39,7 +39,10 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource: "arn:aws:dynamodb:us-east-1:*:*"
+      # Restrict our IAM role permissions to
+      # the specific table for the stage
+      Resource:
+        - "Fn::GetAtt": [ AuditTable, Arn ]
 
 functions:
   # Defines an HTTP API endpoint that calls the main function in create.js
